--- a/style.css
+++ b/style.css
@@ -1230,9 +1230,6 @@ nav ul li a:active{
 .container-people > div{
   min-height:365px;
   text-align: center;
-  transition: all 0.25s;
-
-
 }
 
 .container-people img{
@@ -1453,6 +1450,7 @@ textarea {
     margin-top: 4.5%;
   } 
 }
+
 @media (min-width: 576px){
 @keyframes container-people-anim {
   from{
@@ -1462,12 +1460,19 @@ textarea {
   to{
     transform: translateY(0%);
     opacity:1;
-  }
-}
+  }}
+  .container-people > div {
+  
+    transition: all 0.25s;
+}.container-people > div:hover{
+  transform: translateY(-5px);
+ }}
+
+
 @media (min-width: 768px){
 .container-people > div {
   margin-bottom: 6%;
-}}
+}
 
 }
 @media (max-width: 768px){
@@ -1565,9 +1570,11 @@ textarea {
     height: 14%;
   }
 
-  .about-us-description p{
-    margin-bottom:0.5%;
-  }
+  .about-us-description p {
+    margin-bottom: 5%;
+    margin-top: 6%;
+    font-size: 0.9rem;
+}
 }
 
 @media (max-width: 780px) and (-webkit-min-device-pixel-ratio: 1)
