--- a/style.css
+++ b/style.css
@@ -204,14 +204,13 @@ nav ul li a:active{
     position: fixed;
     width: 100%;
     height: 100vh;
-  transform:translateY(66px);
-  left: -100%;
+  transform: translate(-100%,66px);    
     text-align: center;
     transition: all .5s;
   }
 
   nav ul.show{
-    left: 0;
+   transform: translate(0,66px);
     background-color: rgba(25,25,25,0.95);
 
   }
