--- a/style.css
+++ b/style.css
@@ -205,20 +205,22 @@ nav ul li a:active{
     width: 100%;
     height: 100vh;
   transform: translate(-100%,66px);    
-    text-align: center;
     transition: all .5s;
   }
 
   nav ul.show{
    transform: translate(0,66px);
     background-color: rgba(25,25,25,0.95);
-
+    padding: 0;
+    margin: 0;
   }
 
   nav ul li{
+    line-height: 2rem;
+    text-align: center;
+
     display: block;
     margin: 26px 0;
-    line-height: 2rem;
     border-bottom: 2px solid rgba(160,160,160,0.3);
     padding-bottom: 20px;
   }
