--- a/style.css
+++ b/style.css
@@ -1215,7 +1215,6 @@ nav ul li a:active{
 .container-people > div{
   min-height:365px;
   text-align: center;  
-  margin-bottom: 6%;
 }
 
 .container-people img{
@@ -1224,7 +1223,10 @@ nav ul li a:active{
   height: 100%;
   border-radius: 4px;
 }
-
+.container-people > div:nth-child(1),
+  .container-people > div:nth-child(3){
+    margin-right: 1.5%;
+  }
 
 
 .container-people > div > div{
@@ -1338,30 +1340,24 @@ textarea {
 }
 
 /* media queries sobre nosotros */
-@media (max-width: 1248px){
 
-  .container-people{
-    margin-bottom: 1%;
-    padding-top: 1%;
-  }
-
-  
-
-  .container-people > div:nth-child(1),
-  .container-people > div:nth-child(3){
-    margin-right: 1.5%;
-  }
-}
 
 @media (max-width: 992px){
 
-  .container-people{
+
+
+  .container-people {
+
+    margin: 3% auto 3%;
     grid-template-columns: 1fr 1fr;
+
+
+}
+
+.container-people > div:nth-child(1),
+  .container-people > div:nth-child(2){
+    margin-bottom: 6%;
   }
-
-  
-
-
 
   .photo-form svg {
     width:20vw;
@@ -1517,9 +1513,10 @@ textarea {
     border-top-right-radius: 4px;
   }
 
-  .container-people > div{
-    background-color: #161616;
-  }
+  .container-people > div:nth-child(1),
+  .container-people > div:nth-child(2), .container-people > div:nth-child(3) {
+    margin-bottom:2%;
+  } 
 
   .container-people > div:hover {
     transform: none;
@@ -1530,8 +1527,8 @@ textarea {
     border-bottom-right-radius: 4px;
     position: relative;
     display:block;
-  }
-  .container-people > div > div p {
+    padding: 6%;
+  }.container-people > div > div p {
     padding-bottom: 0;
   }
   .container-about-us,
