--- a/style.css
+++ b/style.css
@@ -200,19 +200,20 @@ nav ul li a:active{
     left: 5.5%;
   }
 
-  nav ul{
+  
+  nav ul {
     position: fixed;
     width: 100%;
     height: 100vh;
-  transform: translate(-100%,66px);    
+    top: 66px;
+    left: -100%;
+    text-align: center;
     transition: all .5s;
-  }
+}
 
   nav ul.show{
-   transform: translate(0,66px);
     background-color: rgba(25,25,25,0.95);
-    padding: 0;
-    margin: 0;
+    left: 0;
   }
 
   nav ul li{
@@ -1244,8 +1245,7 @@ nav ul li a:active{
 
 
 .container-people > div > div{
-  background-color: rgba(25,25,25,0.9);
-  padding-top: 3%;
+  background-color: #161616;  padding-top: 3%;
   display:none;
   position:absolute;
   top:0;
@@ -1512,7 +1512,10 @@ textarea {
 
 @media (max-width: 576px){
 
- 
+  .about-us-description p {
+    margin-left: 7%;
+    margin-right: 7%;
+}
   .container-people{
     grid-template-columns: 1fr;
     margin-top: 6%;
@@ -1527,15 +1530,16 @@ textarea {
     border-top-right-radius: 4px;
   }
 
+  
+  .container-people > div,
   .container-people > div:nth-child(1),
-  .container-people > div:nth-child(2), .container-people > div:nth-child(3) {
-    margin-bottom:2%;
+   .container-people > div:nth-child(3) {
+    margin-bottom:2.5%;
   } 
-
+  
   .container-people > div:hover {
     transform: none;
   } 
-  
   .container-people > div > div {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -1544,6 +1548,7 @@ textarea {
     padding: 6%;
   }.container-people > div > div p {
     padding-bottom: 0;
+    font-size:0.9rem;
   }
   .container-about-us,
   .container-form{
