--- a/styles/recetas-detalle.css
+++ b/styles/recetas-detalle.css
@@ -421,6 +421,29 @@ nav ul li a:active{
   border-radius: 4px;
   object-fit: cover;
 }
+.card-link{
+  color: white;
+  border-radius: 4px;
+  font-size: 15px;
+  padding: 9px 20px;
+  border: 1px solid white;
+  text-transform: uppercase;
+  background-color: black;
+  opacity: 0.9;
+  margin-bottom: 9%;
+}
+
+.card-link:hover{
+  background-color: rgba(160,160,160,0.3);
+  opacity: 1;
+  border: 0;
+}
+
+.card-link:active{
+  background-color: white;
+  color: rgb(25,25,25);
+  font-weight: 600;
+}
 
 /* media queries main detalles de una receta*/
 @media (max-width: 992px){
