--- a/styles/index.css
+++ b/styles/index.css
@@ -27,7 +27,10 @@
        url('../fonts/open-sans-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-v20-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
-
+ul::before {
+  content: "\f8cc";
+  font-family: " Font Awesome 5 Free ";
+  }
 *{
   padding: 0;
   margin: 0;
