--- a/styles/sobre-nosotros.css
+++ b/styles/sobre-nosotros.css
@@ -27,6 +27,7 @@
        url('../fonts/open-sans-v20-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-v20-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
+
 *{
   padding: 0;
   margin: 0;
@@ -36,12 +37,15 @@
 body{
   background-color: black;
 }
+
 h1, h2, h3, h4, h5, h5{
   font-family: "Open sans",sans-serif;
 }
+
 ul, li, a, p, figcaption{
   font: 400 15px/1.5 "Open sans",sans-serif;
 }
+
 .body-white{
   background-color: white;
 }
@@ -89,7 +93,6 @@ nav a div p{
 
 }
 
-
 nav a div:hover{
   opacity: 0.5;
 }
@@ -105,8 +108,6 @@ nav ul li{
   margin: 0 8px;
   font-size: 0.88rem;
   text-transform: uppercase;
-
-
 }
 
 nav ul li a{
@@ -136,7 +137,6 @@ nav ul li a:active{
   background-color: transparent;
   cursor: pointer;
   border: none;
-
 }
 
 .menu-ham span{
@@ -156,8 +156,8 @@ nav ul li a:active{
 
 .br-2.animation{
   opacity: 0; 
-
 }
+
 .br-3.animation{
   transform: rotate(45deg) translate(-5px, -7.8px);
   transition: 0.4s;
@@ -179,7 +179,6 @@ nav ul li a:active{
     left: 5.5%;
   }
 
-  
   nav ul {
     position: fixed;
     width: 100%;
@@ -188,7 +187,7 @@ nav ul li a:active{
     left: -100%;
     text-align: center;
     transition: all .5s;
-}
+  }
 
   nav ul.show{
     background-color: rgba(25,25,25,0.95);
@@ -197,8 +196,7 @@ nav ul li a:active{
 
   nav ul li{
     line-height: 2rem;
-    text-align: center;
-
+    text-align: center; 
     display: block;
     margin: 26px 0;
     border-bottom: 2px solid rgba(160,160,160,0.3);
@@ -214,7 +212,7 @@ nav ul li a:active{
 @media (max-width: 576px){
   nav a .logo {
     display: none;
-}
+  }
   nav a .logo-reduce {
     display: inline;
   }
@@ -256,25 +254,27 @@ nav ul li a:active{
 }
 .about-us-photo  {
   animation: about-us-photo-back  1s ease-in-out 0s 1;
-
 }
+
 @keyframes about-us-photo-back{
   from{
     opacity:0;
   }
   to{
-
     opacity:1;  
   }
 }
+
 .about-us-photo > div,
 .photo-form > div {
   background-color: rgba(0,0,0,0.9);
   color: white;
 }
+
 .about-us-description, .form-fields, .photo-form {
   min-width: 50vw;
 }
+
 .about-us-photo > div {
   padding: 4%;
   border-top-right-radius: 4px;
@@ -282,7 +282,7 @@ nav ul li a:active{
   padding-left: 10.5%;
   animation: about-us-photo-anim  1s ease-in-out 0s 1;
   padding: 4%;
-    padding-left: 10.5%;
+  padding-left: 10.5%;
 }
 
 @keyframes about-us-photo-anim{
@@ -292,7 +292,6 @@ nav ul li a:active{
   }
   to{
     transform: translateX(0px);
-
     opacity:1;
   }
 }
@@ -353,11 +352,11 @@ nav ul li a:active{
   height: 100%;
   border-radius: 4px;
 }
-.container-people > div:nth-child(1),
-  .container-people > div:nth-child(3){
-    margin-right: 1.5%;
-  }
 
+.container-people > div:nth-child(1),
+.container-people > div:nth-child(3){
+  margin-right: 1.5%;
+}
 
 .container-people > div > div{
   background-color: #161616;  padding-top: 3%;
@@ -366,7 +365,6 @@ nav ul li a:active{
   top:0;
   border-radius: 4px;
   color:white;
-
 }
 
 .container-people > div:hover > div{
@@ -470,20 +468,14 @@ textarea {
 
 /* media queries sobre nosotros */
 
-
 @media (max-width: 992px){
 
-
-
   .container-people {
-
     margin: 3% auto 3%;
     grid-template-columns: 1fr 1fr;
+  }
 
-
-}
-
-.container-people > div:nth-child(1),
+  .container-people > div:nth-child(1),
   .container-people > div:nth-child(2){
     margin-bottom: 6%;
   }
@@ -495,8 +487,6 @@ textarea {
 }
 
 @media (min-width: 780px){
-  
- 
   .photo-form:hover > div {
     background-color: rgba(0,0,0,0.85);
   }
@@ -532,12 +522,14 @@ textarea {
     }
   }
 }
+
 @media (max-width: 1050px) and (min-width: 68px){
   .about-us-description{
     padding-bottom: 4%;
-  } }
-@media (max-width: 768px) and (min-width: 576px){
+  }
+}
 
+@media (max-width: 768px) and (min-width: 576px){
   .container-about-us,
   .container-form{
     flex-direction: column;
@@ -557,26 +549,27 @@ textarea {
 }
 
 @media (min-width: 576px){
-@keyframes container-people-anim {
-  from{
-    transform: translateY(-2%);
-    opacity:0;
+  @keyframes container-people-anim {
+    from{
+      transform: translateY(-2%);
+      opacity:0;
+    }
+    to{
+      transform: translateY(0%);
+      opacity:1;
+    }
   }
-  to{
-    transform: translateY(0%);
-    opacity:1;
-  }}
-  .container-people > div {
-  
-    transition: all 0.25s;
-}.container-people > div:hover{
-  transform: translateY(-5px);
- }}
 
+  .container-people > div {
+    transition: all 0.25s;
+  }
+  
+  .container-people > div:hover {
+    transform: translateY(-5px);
+  }
+}
 
 @media (max-width: 768px){
-
-
   .about-us-photo{
     padding:30%;
     flex: none;
@@ -626,16 +619,17 @@ textarea {
 }
 
 @media (max-width: 576px){
-
   .about-us-description p {
     margin-left: 7%;
     margin-right: 7%;
-}
+  }
+
   .container-people{
     grid-template-columns: 1fr;
     margin-top: 6%;
     padding-top: 0;
   }
+
   .container-people img {
     height:70%;
     width:100%;
@@ -645,7 +639,6 @@ textarea {
     border-top-right-radius: 4px;
   }
 
-  
   .container-people > div,
   .container-people > div:nth-child(1),
    .container-people > div:nth-child(3) {
@@ -655,13 +648,16 @@ textarea {
   .container-people > div:hover {
     transform: none;
   } 
+
   .container-people > div > div {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     position: relative;
     display:block;
     padding: 6%;
-  }.container-people > div > div p {
+  }
+  
+  .container-people > div > div p {
     padding-bottom: 0;
     font-size:0.9rem;
   }
@@ -677,47 +673,38 @@ textarea {
 
 }
 
-@media (max-width: 780px) and (-webkit-min-device-pixel-ratio: 1)
-{
+@media (max-width: 780px) and (-webkit-min-device-pixel-ratio: 1){
   .about-us-photo {
     background-image: url(../img/sobre-nosotros-780.jpg);
   }
 }
 
-@media
-(max-width: 780px) and (-webkit-min-device-pixel-ratio: 2)
-{
+@media (max-width: 780px) and (-webkit-min-device-pixel-ratio: 2){
   .about-us-photo {
     background-image: url(../img/sobre-nosotros-780-x2.jpg);
   }
 }
 
-@media
-(min-width: 780px) and (-webkit-min-device-pixel-ratio: 1)
-{
-    .about-us-photo {
-        background-image: url(../img/sobre-nosotros-840.jpg);
-    }
+@media (min-width: 780px) and (-webkit-min-device-pixel-ratio: 1){
+  .about-us-photo {
+    background-image: url(../img/sobre-nosotros-840.jpg);
+  }
 }
 
-@media
-(min-width: 780px) and (-webkit-min-device-pixel-ratio: 2)
-{
-    .about-us-photo {
-        background-image: url(../img/sobre-nosotros-840-x2.jpg);
-    }
-}
-
-.photo-form {
+@media (min-width: 780px) and (-webkit-min-device-pixel-ratio: 2){
+  .about-us-photo {
+    background-image: url(../img/sobre-nosotros-840-x2.jpg);
+  }
+  
+  .photo-form {
     background-image: url(../img/contacto-840.jpg);
+  }
 }
 
-@media
-(-webkit-min-device-pixel-ratio: 2)
-{
-    .photo-form {
-        background-image: url(../img/contacto-840-x2.jpg);
-    }
+@media(-webkit-min-device-pixel-ratio: 2){
+  .photo-form {
+    background-image: url(../img/contacto-840-x2.jpg);
+  }
 }
 
 /* footer */
